--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ thiserror = { version = ">1.0", default-features = false }
 # heapless = { version = "0.8", optional = true }
 
 # For embedded-hal support later
-# embedded-hal = { version = "1.0.0", optional = true }
-# embedded-hal-async = { version = "1.0.0", optional = true }
+embedded-hal = { version = "1.0.0", optional = true }
+embedded-hal-async = { version = "1.0.0", optional = true }
 
 [features]
 default = [] # no_std by default
