--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = { version = ">1.0", default-features = false }
 # For embedded-hal support later
 embedded-hal = { version = "1.0.0", optional = true }
 embedded-hal-async = { version = "1.0.0", optional = true }
+arrayvec = "0.7.6"
 
 [features]
 default = [] # no_std by default
