--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ thiserror = { version = ">1.0", default-features = false }
 embedded-hal = { version = "1.0.0", optional = true }
 embedded-hal-async = { version = "1.0.0", optional = true }
 arrayvec = "0.7.6"
+heapless = "0.8.0"
 
 [features]
 default = [] # no_std by default
